# Spreadsheet

./: CMakeLists.txt  main.cpp
core/: Cell.cpp  Cell.h  FileManager.cpp  FileManager.h  Workbook.cpp  Workbook.h  Worksheet.cpp  Worksheet.h
ui/: CellDetailEditor.cpp  CellDetailEditor.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SearchWidget.cpp  SearchWidget.h  SpreadsheetView.cpp  SpreadsheetView.h  WorksheetManager.cpp  WorksheetManager.h
